--- a/RESTAPIFRAMEWORK/pom.xml
+++ b/RESTAPIFRAMEWORK/pom.xml
@@ -92,6 +92,7 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>3.1.0</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
